--- a/src/index.css
+++ b/src/index.css
@@ -179,14 +179,14 @@ code {
   height: 100px;
 }
 
-.modal {
-  position: absolute;
+/*.modal {
+  position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
 }
 
 .modal-content {
@@ -196,7 +196,7 @@ code {
   left: 50%;
   max-width: 90%;
   pointer-events: none;
-  position: absolute;
+  position: relative;
   top: 50%;
   transform: translate(-50%, -50%);
   width: 30em;
@@ -209,6 +209,40 @@ code {
 .modal-header {
   display: flex;
   justify-content: space-between;
+}*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #8a9a5b;
+  border: 2px solid #000;
+  padding: 2rem;
+  transition: all 2s;
+}
+
+.modal-enter {
+  opacity: 0;
+}
+.modal-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-out;
+}
+.modal-exit {
+  opacity: 1;
+}
+.modal-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-out;
+}
+
+.backdrop {
+  z-index: 1;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
 }
 
 .auth-form {
